--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -11,12 +11,18 @@
         integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin=""/>
 
+  <link rel="public/LeafletFullScreen/leaflet.fullscreen.css">
+
+
+
 <!--  <script src="https://unpkg.com/vue@2.5.16/dist/vue.js" crossorigin=""></script>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Make sure you put this AFTER Leaflet's CSS -->
   <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
           integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
           crossorigin=""></script>
+
+  <script src="public/LeafletFullScreen/Leaflet.fullscreen.js"></script>
 
 </head>
 <body>
@@ -56,16 +62,19 @@
       <button class="btn btn-primary btn-sm" id="last5Events">Покажи посл. 5 съобщения</button>
       <div><br></div>
 
-      <ul class="list-group">
-        <li class="list-group-item">съобщение 1</li>
-        <li class="list-group-item">съобщение 2</li>
-        <li class="list-group-item">съобщение 3</li>
-        <li class="list-group-item">съобщение 4</li>
-        <li class="list-group-item">съобщение 5</li>
+      <ul class="list-group" id="event_list">
+        <li class="list-group-item" id="event_0">съобщение 1</li>
+        <li class="list-group-item" id="event_1">съобщение 2</li>
+        <li class="list-group-item" id="event_2">съобщение 3</li>
+        <li class="list-group-item" id="event_3">съобщение 4</li>
+        <li class="list-group-item" id="event_4">съобщение 5</li>
       </ul>
 
       <div><hr></div>
+      <!--
       <button class="btn btn-primary btn-sm" id="allEvents">Всички съобщения</button>
+
+      -->
     </div>
   </div>
 </div>
