--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -38,21 +38,21 @@
     </div>
     <div class="col-md-3 breadcrumb" style="background-color: beige">
       <div class="">
-        <button class="btn btn-success" id="showLanes">Покажи всички пътеки</button>
+        <button class="btn btn-success" id="showLanes">Избери населено място</button>
       </div>
       <div><hr></div>
 
       <div>
         <form class="form-inline">
           <div class="form-group mb-2">
-            <input placeholder="Търсене по дата"  class="form-control form-control-sm" id="dateSearch"/>
+            <input placeholder="Покажи притока на пешеходци по дата и час"  class="form-control form-control-sm" id="dateSearch"/>
             <input type="submit" value="Търси"  class="btn btn-outline-primary btn-sm" />
           </div>
         </form>
 
         <form class="form-inline">
           <div class="form-group mb-2">
-            <input placeholder="Търсене по проблем" class="form-control form-control-sm" id="problemSearch"/>
+            <input placeholder="Покажи всички съоръжения с регистрирана." class="form-control form-control-sm" id="problemSearch"/>
             <input type="submit" value="Търси" class="btn btn-outline-primary btn-sm btn-sm" />
           </div>
         </form>
