Change texts and typos

--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -39,7 +39,7 @@
     <div class="col-md-3 breadcrumb" style="background-color: beige">
       <div class="">
         <select>
-          <option value="all">Покажи всички</option>
+          <option value="all">Населени места/всички</option>
           <option value="albena">Албена</option>
           <option value="sofia">София</option>
         </select>
@@ -47,7 +47,7 @@
       </div>
       <div><hr></div>
 
-      <div>
+<!--      <div>
         <form class="form-inline">
           <div class="form-group mb-2">
             <select>
@@ -56,10 +56,8 @@
             </select>
           </div>
         </form>
-
-
       </div>
-
+-->
       <div><hr></div>
       <button class="btn btn-primary btn-sm" id="last5Events">Покажи посл. 5 съобщения</button>
       <div><br></div>
