--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -11,7 +11,7 @@
         integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
         crossorigin=""/>
 
-  <link rel="public/LeafletFullScreen/leaflet.fullscreen.css">
+  <link rel="stylesheet" href="public/LeafletFullScreen/leaflet.fullscreen.css">
 
 
 
