--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -7,28 +7,42 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+<!--  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
         integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-        crossorigin=""/>
+        crossorigin=""/>-->
+  <link rel="stylesheet" href="public/leafletjs/leaflet.css">
 
   <link rel="stylesheet" href="public/LeafletFullScreen/leaflet.fullscreen.css">
-
-
+  <link rel="stylesheet" href="public/css/style.css">
 
 <!--  <script src="https://unpkg.com/vue@2.5.16/dist/vue.js" crossorigin=""></script>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Make sure you put this AFTER Leaflet's CSS -->
-  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+<!--  <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
           integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
-          crossorigin=""></script>
+          crossorigin=""></script>-->
+  <script src="public/leafletjs/leaflet-src.js"></script>
 
   <script src="public/LeafletFullScreen/Leaflet.fullscreen.js"></script>
 
 </head>
 <body>
 <div class="container">
-  <div class="row breadcrumb" style="background-color: aliceblue">
-    <div>Пешеходни Пътеки Онлайн карта</div>
+  <div class="row" >
+    <div class="col-md-12 breadcrumb" style="background-color: aliceblue">
+      Пешеходни Пътеки Онлайн карта
+      <div class="leftsided">
+        <a href="http://mapslab.io" title="MapsLab.io" target="_blank">
+          <img src="public/images/mapslabWhitebg140_72.png" height="28" >
+        </a>
+      </div>
+      <div class="leftsided">
+        <a href="http://www.spacelab.bg" title="SpaceLab.bg" target="_blank">
+          <img src="public/images/Logo_Empty32.png"  height="28" >
+        </a>
+      </div>
+    </div>
+
   </div>
 
 
@@ -82,6 +96,12 @@
             <input type="submit" value="Търси" class="btn btn-outline-primary btn-sm btn-sm" />
           </div>
         </form>
+      </div>
+      
+      <div class="lr" id="lr">
+        <a href="http://www.spacelab.bg" title="SpaceLab.bg" target="_blank">
+          <img src="public/images/Logo_Spacelab.png" height="80">
+        </a>
       </div>
     </div>
   </div>
