--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="public/LeafletFullScreen/leaflet.fullscreen.css">
   <link rel="stylesheet" href="public/css/style.css">
 
+  <!-- Load c3.css -->
+  <link href="public/c3-0.6.7/c3.css" rel="stylesheet">
+
 <!--  <script src="https://unpkg.com/vue@2.5.16/dist/vue.js" crossorigin=""></script>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Make sure you put this AFTER Leaflet's CSS -->
@@ -24,6 +27,10 @@
   <script src="public/leafletjs/leaflet-src.js"></script>
 
   <script src="public/LeafletFullScreen/Leaflet.fullscreen.js"></script>
+
+  <!-- Load d3.js and c3.js -->
+  <script src="public/d3_dist/d3.min.js" charset="utf-8"></script>
+  <script src="public/c3-0.6.7/c3.min.js"></script>
 
 </head>
 <body>
