--- a/init_map_v201808.html
+++ b/init_map_v201808.html
@@ -61,8 +61,8 @@
       <div class="">
         <select>
           <option value="all">Населени места/всички</option>
+          <option value="sofia">София - БАН</option>
           <option value="albena">Албена</option>
-          <option value="sofia">София</option>
         </select>
 <!--        <button class="btn btn-success" id="showLanes">Избери населено място</button>-->
       </div>
