--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,7 @@
   <script src="public/c3-0.6.7/c3.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <title>Пешеходна пътека Албена - Пресекли пешеходци</title>
+  <title>Пешеходна пътека София БАН - Пресекли пешеходци</title>
 </head>
 <body>
 
