--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,7 @@
   <script src="public/c3-0.6.7/c3.min.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <title>Пешеходна пътека София БАН - Пресекли пешеходци</title>
+  <title>Пешеходна пътека Варна ул.Георги Бенковски - Пресекли пешеходци</title>
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 <script>
 //  var base_uri = "http://localhost:8085/";
   var base_uri = "http://206.81.20.203:8080";
-  var chart_uri = base_uri + '/timeseries';
+  var chart_uri = base_uri + '/timeseries_var';
 
   function loadPD(data) {
     console.log(data);
